syntax = "proto3";
package products;

option go_package = "github.com/phamhoangnam0890/product-management-service/app/proto/products";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UsersService {

  rpc UsersList (UsersListRequest) returns (UsersListResponse) {
  }
  rpc UserInfo (UserInfoRequest) returns (UserInfoResponse) {
  }
  rpc UserEntry (UserEntryRequest) returns (google.protobuf.Empty) {
  }
}

message UsersListRequest {
  google.protobuf.Int64Value offset = 1;
  string key_word = 2;
}

message UsersListResponse {
  repeated UserData data = 1;
  int64 total = 2;
}

message UserData {
  string user_id = 1;
  string user_name = 2;
  string user_role = 3;
  google.protobuf.Timestamp updated_at = 4;
  string tel = 5;
  string email = 6;
  string login_id = 7;
}

message UserInfoRequest {
  string user_id = 1;
}

message UserInfoResponse {
  string user_name = 1;
  int64 user_role_id = 2;
  string user_role = 3;
  google.protobuf.Timestamp updated_at = 4;
  string tel = 5;
  string email = 6;
  string login_id = 7;
}

message UserEntryRequest {
  google.protobuf.StringValue user_id = 1;
  string user_name = 2;
  int64 user_role_id = 3;
  string tel = 4;
  string email = 5;
  google.protobuf.StringValue password_then = 6;
  google.protobuf.StringValue password_now = 7;
  string login_id = 8;
}